Add the pass through sudgt urls to the server

--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -48,4 +48,22 @@ server {
         location ~ /\.ht {
                 deny all;
         }
+
+	# point certain urls to the other sudgt server
+        location /sudgt/data-access {
+                access_log  /var/log/nginx/access.log;
+                proxy_pass http://108.128.129.35;
+        }
+        location /sudgt/activity_assessment/ {
+                access_log  /var/log/nginx/access.log;
+                proxy_pass http://108.128.129.35;
+        }
+        location /sudgt/static/ {
+                access_log  /var/log/nginx/access.log;
+                proxy_pass http://108.128.129.35;
+        }
+        location /sudgt/activities {
+                access_log  /var/log/nginx/access.log;
+                proxy_pass http://108.128.129.35;
+        }
 }
