--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -25,10 +25,11 @@ server {
 
         server_name _;
 
-        location / {
+        location  /sudgt/ {
                 # First attempt to serve request as file, then
                 # as directory, then fall back to displaying a 404.
-                try_files $uri $uri/ =404;
+                #try_files $uri $uri/ =404;
+                try_files $uri $uri/ /sudgt/index.php?$args;
         }
 
         # pass PHP scripts to FastCGI server
