--- a/roles/restore/tasks/main.yml
+++ b/roles/restore/tasks/main.yml
@@ -43,6 +43,14 @@
   command: mv /tmp/restore/files /var/www/html/sudgt
   become: true
 
+- name: Change the ownership of the directory
+  become: true
+  file:
+    path: /var/www/html/sudgt
+    state: directory
+    recurse: yes
+    group: www-data
+
 # import is not idempotent so drop the database and
 # recreate it
 - mysql_db:
