--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -56,6 +56,9 @@ server {
 	#
 	location ~ \.php$ {
 		include snippets/fastcgi-php.conf;
+
+                fastcgi_param HTTP_HOST data.england.nhs.uk;
+                fastcgi_param  HTTPS 'on';
 	#
 	#	# With php-fpm (or other unix sockets):
 		fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
