--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -56,6 +56,7 @@ server {
 	#
 	location ~ \.php$ {
 		include snippets/fastcgi-php.conf;
+        client_max_body_size 2M;
 	#
 	#	# With php-fpm (or other unix sockets):
 		fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
@@ -86,5 +87,4 @@ server {
 		access_log  /var/log/nginx/access.log;
 		proxy_pass http://108.128.129.35;
 	}
-
 }
