increases client_max_body_size so that the joomla team can add an upload form

--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -56,10 +56,10 @@ server {
 	#
 	location ~ \.php$ {
 		include snippets/fastcgi-php.conf;
-
-                fastcgi_param HTTP_HOST data.england.nhs.uk;
-                fastcgi_param  HTTPS 'on';
-	#
+		client_max_body_size 2M;
+		fastcgi_param HTTP_HOST data.england.nhs.uk;
+		fastcgi_param  HTTPS 'on';
+#
 	#	# With php-fpm (or other unix sockets):
 		fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
 	#	# With php-cgi (or other tcp sockets):
