Delete the existing directory if it exists

--- a/roles/restore/tasks/main.yml
+++ b/roles/restore/tasks/main.yml
@@ -37,6 +37,11 @@
     state: directory
   become: true
 
+- name: remove the existing directory
+  file:
+    state: absent
+    path: /var/www/html/sudgt
+
 # Ansible doesn't currently support copying directories
 # on remote sources
 - name: Copy the file
