Change the nginx proxy pass routing to use the sudgt-python.data.catalogue private dns

--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -75,19 +75,18 @@ server {
 
 	location /sudgt/data-access {
 		access_log  /var/log/nginx/access.log;
-		proxy_pass http://108.128.129.35;
+		proxy_pass http://sudgt-python.data.catalogue;
 	}
 	location /sudgt/activity_assessment/ {
 		access_log  /var/log/nginx/access.log;
-		proxy_pass http://108.128.129.35;
+		proxy_pass http://sudgt-python.data.catalogue;
 	}
 	location /sudgt/static/ {
 		access_log  /var/log/nginx/access.log;
-		proxy_pass http://108.128.129.35;
+		proxy_pass http://sudgt-python.data.catalogue;
 	}
 	location /sudgt/activities {
 		access_log  /var/log/nginx/access.log;
-		proxy_pass http://108.128.129.35;
+		proxy_pass http://sudgt-python.data.catalogue;
 	}
-
 }
